added few styling changes to make it responsive

--- a/instabusiness/templates/pages/about.html
+++ b/instabusiness/templates/pages/about.html
@@ -15,31 +15,35 @@
                 We would like to continuously develop the project and are also constantly looking for new ideas and exciting projects. If you have suggestions for improvement or ideas, please write us an email to <a class="about-anchor" href="mailto:dhirensr@gmail.com"> dhirensr@gmail.com</a>
             </p>
         </div>
-        <div id="row">
-            <div class="column">
+        <div class="container">
+        <div class="row">
 
-                <div class="card" id="card-about">
-                    <img  width="298" height="200" src="{% static 'images/DSC_0099.JPG' %}" alt="Dhiren Serai" >
+            <div class="card col-lg-6 mb-4" style="width: 18 rem;">
+                <img  class="card-img-top" src="{% static 'images/DSC_0099.JPG' %}" alt="Dhiren Serai" >
+                <div class="card-body">
                     <h4>Dhiren Serai</h4>
 
-                    <a class="about-anchor" href="https://github.com/dhirensr"><i class="fa fa-github"></i></a>
-                    <a class="about-anchor" href="mailto:dhirensr@gmail.com"><i class="fa fa-envelope"></i></a>
-                    <a class="about-anchor" href="https://www.linkedin.com/in/dhiren-serai-16409b114/"><i class="fa fa-linkedin"></i></a>
-
+                    <a class="about-anchor card-link" href="https://github.com/dhirensr"><i class="fa fa-github"></i></a>
+                    <a class="about-anchor card-link" href="mailto:dhirensr@gmail.com"><i class="fa fa-envelope"></i></a>
+                    <a class="about-anchor card-link" href="https://www.linkedin.com/in/dhiren-serai-16409b114/"><i class="fa fa-linkedin"></i></a>
                 </div>
+
             </div>
-            <div class="column">
-                <div class="card" id="card-about">
-                    <img width="298" height="200" src="{% static 'images/shashank.png' %}" alt="Shashank" >
+
+
+            <div class="card col-lg-6 mb-4" style="width: 18rem;">
+                    <img class="card-img-top" src="{% static 'images/shashank.png' %}" alt="Shashank" >
+                    <div class="card-body">
                     <h4>Shashank Salian</h4>
 
-                    <a class="about-anchor" href="https://github.com/shashank3110"><i class="fa fa-github"></i></a>
-                    <a class="about-anchor" href="mailto:srs.shashanks@gmail.com"><i class="fa fa-envelope"></i></a>
-                    <a class="about-anchor" href="https://www.linkedin.com/in/shashanksalian"><i class="fa fa-linkedin"></i></a>
+                    <a class="about-anchor card-link" href="https://github.com/shashank3110"><i class="fa fa-github"></i></a>
+                    <a class="about-anchor card-link" href="mailto:srs.shashanks@gmail.com"><i class="fa fa-envelope"></i></a>
+                    <a class="about-anchor card-link" href="https://www.linkedin.com/in/shashanksalian"><i class="fa fa-linkedin"></i></a>
+                    </div>
 
                 </div>
 
-            </div>
+
 
 
         </div>
