--- a/catalogue/templates/catalogue/list.html
+++ b/catalogue/templates/catalogue/list.html
@@ -6,7 +6,7 @@
 
     <div id="sidebar">
         <h3>Categories</h3>
-        <ul>
+        <ul class="list-group list-group-horizontal-sm">
             <li {% if not category %}class="selected"{% endif %}>
                 <a href="{% url "catalogue:page_list" %}">All</a>
             </li>
